metrics&logs/k8s/metrics_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testmetrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metrics-example-app
  name: metrics-example-app
  namespace: testmetrics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: metrics-example-app
  template:
    metadata:
      labels:
        app: metrics-example-app
    spec:
      containers:
      - image: tmarkunin/test_metrics:logging
        imagePullPolicy: Always
        name: metrics-example-app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-example-service
  name: metrics-example-service
  namespace: testmetrics
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: node
  selector:
    app: metrics-example-app
  type: ClusterIP
